<resources>
    <string name="app_name">Drug Log</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_drug_button_text">Add Drug</string>
    <string name="title_activity_drugs_activity">drugs_activity</string>
    <string name="title_activity_drugs">drugs</string>
    <string name="drugs_activity_actionbar_text">Drugs</string>
    <string name="title_activity_calendar">Calendar</string>

    <string name="title_section1">Calendar</string>
    <string name="title_section2">Drugs</string>
    <string name="title_section3">Stash</string>
    <string name="title_section4">Notifications</string>
    <string name ="title_section5">Statistics</string>

    <string name="drugs_bar1">Drug Class 1</string>
    <string name="drugs_bar2">Drug Class 2</string>
    <string name="drugs_bar3">Drug Class 3</string>
    <string name="drugs_bar4">Drug class 4</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_add_drug_class" >Add New Drug Class</string>
    <string name="action_add_drug" >Add New Drug</string>
    <string name="action_add_class" >Add New Drug Class</string>
    <string name="add_dose_text">Add Log</string>
    <string name="title_activity_add_drug_class">Add New Drug Class</string>

    <string name="title_activity_add_dose">Add New Drug Log</string>
    <string name="text_add_dose_select_drug">Select Drug</string>
    <string name="text_add_dose_dose">Dose</string>
    <string name="text_drug_selected">Drug selected: </string>
    <string name="text_add_dose_date">Route of administration: </string>
    <string name="text_button_add_dose">Add Log</string>

    <string name="title_activity_set_date">Set Date</string>
    <string name="title_activity_set_time">Set Time</string>
    <string name="title_activity_date_view">DateView</string>
    <string name="title_activity_dose_view">DoseView</string>
    <string name="title_activity_add_note">AddNote</string>
    <string name="title_activity_note_view">NoteView</string>
    <string name="title_activity_add_drug">AddDrug</string>
    <string name="title_activity_drug_view">DrugView</string>

    <string name="action_example">Example action</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_reminder">AddReminder</string>
    <string name="title_activity_usage_graph">UsageGraph</string>
    <string name="title_activity_donate">Donate</string>
    <string name="title_activity_edit_drug">EditDrug</string>
    <string name="title_activity_edit_drug_class">EditDrugClass</string>
    <string name="title_activity_general_statistics">GeneralStatistics</string>
    <string name="title_activity_roa_graph">RoaGraph</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_add_notification">AddNotification</string>
    <string name="title_activity_general_usage_graph">GeneralUsageGraph</string>
    <string name="title_activity_reminders">Reminders</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_general_roa_graph">GeneralRoaGraph</string>
</resources>
