<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lolbellum.druglog.AddDose">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_add_dose_select_drug"
        android:id="@+id/text_add_dose_select_drug"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:id="@+id/drug_class_list"
        android:layout_below="@+id/text_add_dose_select_drug"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_add_dose_dose"
        android:id="@+id/text_add_dose_dose"
        android:layout_below="@+id/text_selected_drug"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/text_dose"
        android:numeric="integer|decimal"
        android:hint="0.0000"
        android:layout_below="@+id/text_selected_drug"
        android:layout_toRightOf="@+id/text_add_dose_dose"
        android:layout_toEndOf="@+id/text_add_dose_dose"
        android:layout_marginLeft="25dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/metric_spinner"
        android:layout_below="@+id/text_selected_drug"
        android:layout_toRightOf="@+id/text_dose"
        android:layout_toEndOf="@+id/text_dose"
        android:layout_marginLeft="15dp"
        android:layout_alignBottom="@+id/text_dose" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_add_dose_date"
        android:id="@+id/text_add_dose_date"
        android:layout_below="@+id/text_dose"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/text_button_add_dose"
        android:id="@+id/button_add_dose"
        android:onClick="clickAddDose"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/roa_spinner"
        android:layout_toRightOf="@+id/text_add_dose_date"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/metric_spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_drug_selected"
        android:id="@+id/text_selected_drug"
        android:layout_below="@+id/drug_class_list"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="None"
        android:id="@+id/drug_selected"
        android:layout_alignTop="@+id/text_selected_drug"
        android:layout_alignLeft="@+id/text_add_dose_select_drug"
        android:layout_alignStart="@+id/text_add_dose_select_drug"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/text_date"
        android:layout_below="@+id/roa_spinner"
        android:layout_toLeftOf="@+id/metric_spinner"
        android:layout_toStartOf="@+id/metric_spinner"
        android:text="6/13/2015"
        android:layout_alignParentBottom="false"
        android:onClick="clickDate"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/text_time"
        android:text="12:00 AM"
        android:onClick="clickTime"
        android:layout_alignTop="@+id/text_date"
        android:layout_toRightOf="@+id/text_date"
        android:layout_toEndOf="@+id/text_date" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notify Me"
        android:id="@+id/check_box_notify_me"
        android:layout_below="@+id/text_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />
</RelativeLayout>
